# gpxtr

./: .flake8  .gcloudignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile.flask  Dockerfile.gunicorn  README.md  README.rst  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: google-app-engine.yaml  publish.yaml  python-app.yml  release-please.yml
docs/: .sourcery.yaml  api.rst  conf.py  distribution.rst  index.rst  installation.rst  requirements.txt  usage.rst
samples/: bad-xml.gpx  basecamp-route.gpx  basecamp-route.md  basecamp-tracks.txt  basecamp.md  basecamp.txt  ich-north-4.gpx  ich-north-fixed.gpx  ich-north-fixed.txt  scenic2.md  zumo2.gpx
src/gpxtable/: __init__.py  cli.py  gpxtable.py  wsgi.py
src/gpxtable/templates/: base.html  upload.html
src/gpxtr/: __init__.py  cli.py  gpxtable.py  gpxtr.py  wsgi.py
src/gpxtr/templates/: upload.html
testdata/: basecamp-route.gpx  basecamp-tracks.gpx  basecamp.gpx  ich-dual-gas.gpx  ich-north-4-fixed.gpx  ich-north.gpx  onthegomap.gpx  scenic2.gpx  zumo3.gpx  zumoxt test.gpx
testdata/ich-north-5/: day1.gpx  day2.gpx  day2alt.gpx  day3.gpx  day3alt.gpx
tests/: test_cli.py  test_gpxtable.py  test_gpxtable_sourcery.py  test_wsgi.py
