[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpxtr"
description = "Generate tables of interesting GPX route and waypoint information"
authors = [
  { name="Paul Traina", email="pleasantone@users.noreply.github.com" },
]

dynamic = ["version"]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "astral",
    "geopandas",
    "gpxpy",
    "haversine",
    "markdown2",
    "numpy",
    "pandas",
    "scipy",
    "shapely"
]

[project.urls]
"Homepage" = "https://github.com/pleasantone/gpxtr"
"Bug Tracker" = "https://github.com/pleasantone/gpxtr/issues"

[project.scripts]
gpxtr = "gpxtr:main"

[tool.setuptools.dynamic]
version = {attr = "gpxtr.__version__"}
